--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@ body{
     background-image: url("fondo.jpg");
     background-repeat: no-repeat;
     background-size: 100%; 
-    font-family: Arial;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .menu li{
@@ -12,7 +12,7 @@ body{
 .menu a{
     color: rgb(4, 0, 255);
     text-decoration: none;
-    font-size: 25px;
+    font-size: 18px;
 }
 
 .menu a:hover{
