--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@ body{
     background-image: url("fondo.jpg");
     background-repeat: no-repeat;
     background-size: 100%; 
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .menu li{
