--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,10 @@ body{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
+.menu{
+    display: inline-block;
+}
+
 .menu li{
     list-style: square;
 }
